# fever

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
source/: main.cc
source/ctx/: context.cc  context.h
source/ogl/: buffer.cc  buffer.h  opengl.cc  opengl.h  program.cc  program.h  shader.cc  shader.h  texture.cc  texture.h
source/ogl/shared/: aliases.cc  aliases.h  enums.h
source/rsc/: resource.cc  resource.h
